--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
-    "@types/big.js": "^4.0.5",
-    "@types/es6-promisify": "^6.0.0",
-    "augur.js": "^5.0.0-12",
-    "big.js": "^5.1.2",
-    "es6-promisify": "^6.0.0"
+    "@types/big.js": "4.0.5",
+    "@types/es6-promisify": "6.0.0",
+    "augur.js": "6.7.3",
+    "big.js": "5.2.2",
+    "es6-promisify": "6.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,15 +19,15 @@
     "deploy": "node_modules/.bin/push-dir --dir=dist --branch=gh-pages"
   },
   "devDependencies": {
-    "css-loader": "^1.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "css-loader": "^3.5.1",
+    "html-webpack-plugin": "^4.0.4",
     "push-dir": "^0.4.1",
-    "style-loader": "^0.21.0",
-    "ts-loader": "^4.4.2",
-    "typescript": "^2.9.2",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.3"
+    "style-loader": "^1.1.3",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   }
 }
